--- a/dev.html
+++ b/dev.html
@@ -5,7 +5,7 @@ layout: default
 <h2>DEV</h2>
 <p>See what we have been up to lately...</p>
 <ul>
-  {% for post in site.categories.dev %}
+  {% for post in site.categories.dev limit:3 %}
   <li>
     <a href="">{{post.title}}</a>
     <p>{{post.meta}}</p>
