--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@ layout: default
 <h2>PRODUCTS</h2>
 <p>Buy one of our awesome products!</p>
 <ul>
-  {% for post in site.categories.products %}
+  {% for post in site.categories.products limit:3 %}
   <li>
     <a href="">{{post.title}}</a>
     <p>{{post.meta}}</p>
